<resources>
    <string name="app_name">Glamora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Glamora</string>
    <string name="sign_in_hint">Sign in to continue</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Log In</string>
    <string name="or">OR</string>
    <string name="err_email_msg">Oops! Your Email Is Not Correct</string>
    <string name="err_email_msg2">Oops! Email has already been taken</string>
    <string name="err_pass_msg">Oops! Your Password Is Not Correct</string>
    <string name="err_pass_msg2">Oops! Your Password Is Too Small</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="err_phone_msg">Oops! Phone Number is Incorrect</string>
    <string name="err_phone_msg2">Oops! Phone has already been taken</string>
    <string name="sign_up_google">Login with Google</string>
    <string name="log_in_guest">Login As Guest</string>
    <string name="dont_have_account">"Don’t have a account? "</string>
    <string name="register">Register</string>
    <string name="lets_started">Let’s Get Started</string>
    <string name="create_account">Create an new account</string>
    <string name="err_name_msg">Oops! Your Name Is Too Small</string>
    <string name="err_repass_msg">Oops! Password Is Not Matching</string>
    <string name="enter_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">have a account?</string>
    <string name="check_out">Check Out</string>
    <string name="total_price">Total Price</string>
    <string name="_766_56">$766.56</string>
    <string name="items">Items</string>
    <string name="discount">Discount</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="nike_air_zoom_pegasus_36_miami">Nike Air Zoom Pegasus 36 Miami</string>
    <string name="favorite_button">Favourites</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">kids</string>
    <string name="sale">Sale</string>
    <string name="brands">Brands</string>
    <string name="price">2000 EGP</string>
    <string name="itemName">Nike Air Max 270 React ENG</string>
    <string name="offer">24% Off</string>
    <string name="pircesale">2600 EGP</string>
    <string name="categories">Category</string>
    <string name="brandname">Brand Name</string>
    <string name="flashsale">Super Flash Sale\n50% Off</string>
    <string name="recommend">Recommended Product</string>
    <string name="counter">10</string>
    <string name="recomtext">We recommend the best for you below</string>
    <string name="recomtext2">Recomended\nProduct</string>
    <string name="your_cart">Your Cart</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="currency">Currency</string>
    <string name="profile">Profile</string>
    <string name="hello_anonymous">Hello, Anonymous</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="delivery_location">Delivery Address</string>
    <string name="cateory">Category</string>
    <string name="filter">Filter</string>
    <string name="back_button">Back</string>
    <string name="shoes">Shoes</string>
    <string name="t_shirts">T-shirts</string>
    <string name="accessories">Accessories</string>
    <string name="type">Type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="remove_filter">REMOVE</string>
    <string name="shipping">Shipping</string>
    <string name="_0">0 EGP</string>
    <string name="reset">Forgot Password?</string>
    <string name="_900_00">$900.00</string>
    <string name="_24">24%</string>
    <string name="address_details">Address Details</string>
    <string name="orders">Orders</string>
    <string name="identity">Identity</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="pay_now">Pay Now</string>
    <string name="change_image">Changed Image</string>
    <string name="sizes">Select Size</string>
    <string name="colors">Select Color</string>
    <string name="description">Description</string>
    <string name="demy_des">The Nike Air Max 270 React ENG combines a full-length React foam midsole with a 270 Max Air unit for unrivaled comfort and a striking visual experience.</string>
    <string name="review">Review Product</string>
    <string name="see_reviews">More Reviews</string>
    <string name="reviewer_one">James Lawson\n</string>
    <string name="review_one">air max are always very comfortable fit, clean and just perfect in every way. just the box was too small and scrunched the sneakers up a little bit, not sure if the box was always this small but the 90s are and will always be one of my favorites.</string>
    <string name="review_two">This is really amazing product, i like the design of product, I hope can buy it again!</string>
    <string name="review_three">air max are always very comfortable fit, clean and just perfect in every way. just the box was too small and scrunched the sneakers up a little bit</string>
    <string name="review_four">air max are always very comfortable fit, clean and just perfect in every way. just the box was too small  </string>
    <string name="add_to_card">Add To Card</string>
    <string name="pay_with_card">Pay With Card</string>
    <string name="item">Item</string>
    <string name="product">Productssssss</string>
    <string name="payment">Payment</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="date">Order Date</string>
    <string name="payment_details">Payment Details</string>
    <string name="itemPrice">Item price</string>
    <string name="manage_locations">Manage Addresses</string>
    <string name="my_locations">My Addresses</string>
    <string name="title_activity_test_bottom_nav">testBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
