<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="169dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="183dp"
        android:layout_height="24dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="114dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#223263"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="22dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="145dp"
        android:text="@string/sign_in_hint"
        android:textAlignment="center"
        android:textColor="#9098B1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background_err"
        android:drawableStart="@drawable/ic_email_err"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#9098B1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/err_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="204dp"
        android:text="@string/err_email_msg"
        android:textColor="#FB7181"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Email" />


    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#9098B1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/err_email_txt" />

    <TextView
        android:id="@+id/err_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="180dp"
        android:text="@string/err_pass_msg"
        android:textColor="#FB7181"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Password" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#40BFFF"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Password" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        android:text="@string/or"
        android:textColor="#9098B1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <View
        android:id="@+id/divider"
        android:layout_width="147dp"
        android:layout_height="1dp"
        android:layout_marginTop="39dp"
        android:background="#9098B1"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <View
        android:id="@+id/divider2"
        android:layout_width="147dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#9098B1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn_googleBtn"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up_google"
        android:textColor="#9098B1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guestBtn"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_launcher_foreground"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/log_in_guest"
        android:textColor="#9098B1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_googleBtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:paddingEnd="5dp"
        android:text="@string/dont_have_account"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestBtn" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="116dp"
        android:clickable="true"
        android:gravity="center"
        android:paddingStart="5dp"
        android:text="@string/register"
        android:textColor="#40BFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>