<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardElevation="6dp"
        app:cardCornerRadius="20dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/filter"
                android:textColor="@color/light_blue"
                android:fontFamily="@font/poppines_extra_bold"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cv_rg"
                app:layout_constraintStart_toStartOf="@+id/cv_rg"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/light_gray"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27">

                <RadioGroup
                    android:id="@+id/rg_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_shoes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textColor="@color/dark_blue"
                        android:text="@string/shoes"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rbtn_shirt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@string/t_shirts"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rbtn_accessories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textColor="@color/dark_blue"
                        android:text="@string/accessories"
                        android:textStyle="bold" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <Button
                android:id="@+id/btn_save_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/light_blue"
                android:elevation="6dp"
                android:text="@string/search"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_rg" />

            <Button
                android:id="@+id/btn_remove_filter"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/remove_filter"
                android:textSize="15dp"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_save_filter"
                app:layout_constraintStart_toStartOf="@+id/btn_save_filter"
                app:layout_constraintTop_toBottomOf="@+id/btn_save_filter" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>